[gd_scene load_steps=83 format=2]

[ext_resource path="res://sprites/player/player_run.png" type="Texture" id=1]
[ext_resource path="res://sprites/player/player_idle.png" type="Texture" id=2]
[ext_resource path="res://sprites/player/player_jump.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/player_attack_ground.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/player_crouch.png" type="Texture" id=5]
[ext_resource path="res://sprites/player/player_crouch_move.png" type="Texture" id=6]
[ext_resource path="res://sprites/player/player_death.png" type="Texture" id=7]
[ext_resource path="res://sprites/player/player_release.png" type="Texture" id=8]
[ext_resource path="res://Human.gd" type="Script" id=9]
[ext_resource path="res://sprites/player/player_damage.png" type="Texture" id=10]
[ext_resource path="res://sprites/player/player_despair.png" type="Texture" id=11]
[ext_resource path="res://sprites/help/e.png" type="Texture" id=12]
[ext_resource path="res://sprites/help/q.png" type="Texture" id=13]
[ext_resource path="res://sprites/help/w.png" type="Texture" id=14]
[ext_resource path="res://sprites/help/d.png" type="Texture" id=15]
[ext_resource path="res://sprites/help/right.png" type="Texture" id=16]
[ext_resource path="res://audio/Player/jump.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/Player/death.wav" type="AudioStream" id=18]

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 10 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 10 )
region = Rect2( 46, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 10 )
region = Rect2( 69, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 11 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 11 )
region = Rect2( 46, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 11 )
region = Rect2( 69, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 11 )
region = Rect2( 92, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 11 )
region = Rect2( 115, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 11 )
region = Rect2( 138, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 11 )
region = Rect2( 161, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 11 )
region = Rect2( 184, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 46, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 69, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 23, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 23, 0, 23, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 46, 0, 23, 40 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 4 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 4 )
region = Rect2( 46, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 4 )
region = Rect2( 69, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 4 )
region = Rect2( 92, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 4 )
region = Rect2( 115, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 4 )
region = Rect2( 138, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 4 )
region = Rect2( 161, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 4 )
region = Rect2( 184, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 4 )
region = Rect2( 207, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 4 )
region = Rect2( 230, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 4 )
region = Rect2( 253, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 4 )
region = Rect2( 276, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 299, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 46, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 69, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 92, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 115, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 138, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 161, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 23, 0, 23, 36 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 72, 36 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 72, 0, 72, 36 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 72, 36 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 216, 0, 72, 36 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 72, 36 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 72, 36 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 432, 0, 72, 36 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ) ],
"loop": false,
"name": "damage",
"speed": 15.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "crouch_move",
"speed": 5.0
}, {
"frames": [ SubResource( 75 ), SubResource( 75 ), SubResource( 75 ), SubResource( 75 ), SubResource( 76 ), SubResource( 76 ), SubResource( 76 ), SubResource( 76 ), SubResource( 76 ), SubResource( 76 ), SubResource( 76 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 77 ), SubResource( 83 ) ],
"loop": false,
"name": "despair",
"speed": 7.0
}, {
"frames": [ SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "release",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": false,
"name": "attack_ground",
"speed": 20.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": false,
"name": "death",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 14 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 16 )
region = Rect2( 13, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 16 )
region = Rect2( 26, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 16 )
region = Rect2( 39, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 13, 11 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 13, 11 )

[sub_resource type="SpriteFrames" id=85]
animations = [ {
"frames": [ SubResource( 87 ) ],
"loop": true,
"name": "w",
"speed": 5.0
}, {
"frames": [ SubResource( 88 ) ],
"loop": true,
"name": "d",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": true,
"name": "right",
"speed": 1.0
}, {
"frames": [ SubResource( 84 ) ],
"loop": true,
"name": "e",
"speed": 5.0
}, {
"frames": [ SubResource( 86 ) ],
"loop": true,
"name": "q",
"speed": 5.0
} ]

[node name="Human" type="KinematicBody2D" groups=["player"]]
position = Vector2( 640, 718 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
animation = "run"
frame = 7
playing = true

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="InteractHelp" type="AnimatedSprite" parent="."]
position = Vector2( 17, -13 )
frames = SubResource( 85 )
animation = "right"

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -10.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
